SEO - adding alt text to images

--- a/bjj.html
+++ b/bjj.html
@@ -334,22 +334,22 @@
         <div class="benefits-text-container">
           <h2>The Benefits</h2>
           <div class="benefits">
-            <img src="./images/icon-self-defense.webp" class="class-icon" alt="" />
+            <img src="./images/icon-self-defense.webp" class="class-icon" alt="self-defense icon" />
             <h3>Self-Defense</h3>
             <p>Acquire practical skills to defend yourself confidently in various situations, boosting your sense of safety and security.</p>
           </div>
           <div class="benefits">
-            <img src="./images/icon-fitness.webp" class="class-icon" alt="" />
+            <img src="./images/icon-fitness.webp" class="class-icon" alt="fitness icon" />
             <h3>Improved Fitness</h3>
             <p>Elevate your cardiovascular health, strength, and overall fitness levels through dynamic BJJ workouts and techniques.</p>
           </div>
           <div class="benefits">
-            <img src="./images/icon-mental-health.webp" class="class-icon" alt="" />
+            <img src="./images/icon-mental-health.webp" class="class-icon" alt="mental health icon" />
             <h3>Mental Wellness</h3>
             <p>Experience improved focus, discipline, and stress management as you navigate the mental challenges and rewards of BJJ training.</p>
           </div>
           <div class="benefits">
-            <img src="./images/icon-community.webp" class="class-icon" alt="" />
+            <img src="./images/icon-community.webp" class="class-icon" alt="community icon" />
             <h3>Supportive Community</h3>
             <p>Join a fun and welcoming community where you'll make friends, share laughs, and support each other on your BJJ journey.</p>
           </div>
@@ -364,7 +364,7 @@
       <div class="first-class-container-inner">
         <div class="tip hidden">
           <div class="tip-image">
-            <img src="./images/icon-tshirt.webp" class="icon" alt="" />
+            <img src="./images/icon-tshirt.webp" class="icon" alt="t-shirt icon" />
           </div>
 
           <h4>Dress Comforably</h4>
@@ -372,14 +372,14 @@
         </div>
         <div class="tip hidden">
           <div class="tip-image">
-            <img src="./images/icon-water-bottle.webp" class="icon" alt="" />
+            <img src="./images/icon-water-bottle.webp" class="icon" alt="water bottle icon" />
           </div>
           <h4>Stay Hydrated</h4>
           <p>Bring along a water bottle to keep yourself hydrated during training.</p>
         </div>
         <div class="tip hidden">
           <div class="tip-image">
-            <img src="./images/icon-scissors.webp" class="icon" alt="" />
+            <img src="./images/icon-scissors.webp" class="icon" alt="scissors icon" />
           </div>
           <h4>Safety First</h4>
           <p>Remove jewelry and trim your fingernails and toenails. This reduces the risk of accidental injury</p>
@@ -395,19 +395,19 @@
           <h3>Carl</h3>
           <img src="./images/icon-5-stars.webp" class="icon-stars" alt="5 stars" />
           <p class="testimonial-review">Great community of people and a fun place to learn BJJ. I’d definitely recommend it!</p>
-          <img src="./images/icon-google-reviews.webp" alt="" class="icon-google" />
+          <img src="./images/icon-google-reviews.webp" alt="google reviews logo" class="icon-google" />
         </div>
         <div class="testimonial-card hidden">
           <h3>Ruth</h3>
           <img src="./images/icon-5-stars.webp" class="icon-stars" alt="5 stars" />
           <p class="testimonial-review">Love this place! Brazilian Jiu-Jitsu classes are excellent and Ken is a superb teacher. Great teaching and support.</p>
-          <img src="./images/icon-google-reviews.webp" alt="" class="icon-google" />
+          <img src="./images/icon-google-reviews.webp" alt="google reviews logo" class="icon-google" />
         </div>
         <div class="testimonial-card hidden">
           <h3>Stroboforbs</h3>
           <img src="./images/icon-5-stars.webp" class="icon-stars" alt="5 stars" />
           <p class="testimonial-review">Training BJJ here has been fantastic. The coaches are clear and supportive, and there's always something new to learn.</p>
-          <img src="./images/icon-google-reviews.webp" alt="" class="icon-google" />
+          <img src="./images/icon-google-reviews.webp" alt="google reviews logo" class="icon-google" />
         </div>
       </div>
       <div class="shape-divider-bottom">
@@ -434,16 +434,16 @@
           <li class="faq">
             <button class="question-wrapper" aria-expanded="false" aria-controls="answer2">
               <span class="question-title">What is the difference between gi and no-gi Brazilian Jiu-Jitsu?</span>
-              <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
-              <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
+              <img src="./images/icon-plus.svg" alt="plus icon" class="icon-plus" />
+              <img src="./images/icon-minus.svg" alt="minus icon" class="hide icon-minus" />
             </button>
             <p class="faq-answer" id="answer2" aria-hidden="true"><span>Gi BJJ involves wearing a traditional uniform, allowing grips on the fabric for control. No-gi BJJ uses athletic wear like rash guards and shorts, emphasizing speed and agility without gripping fabric. Both styles are valuable and we teach both in separate classes. </span></p>
           </li>
           <li class="faq">
             <button class="question-wrapper" aria-expanded="false" aria-controls="answer3">
               <span class="question-title">Can I join BJJ classes if I’ve never trained in martial arts before?</span>
-              <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
-              <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
+              <img src="./images/icon-plus.svg" alt="plus icon" class="icon-plus" />
+              <img src="./images/icon-minus.svg" alt="minus icon" class="hide icon-minus" />
             </button>
             <p class="faq-answer" id="answer3" aria-hidden="true"><span>Absolutely! Our fundamentals class is specifically designed for beginners. You'll learn the foundational techniques and principles in a safe, welcoming environment. No prior experience is required.</span></p>
           </li>
@@ -451,8 +451,8 @@
           <li class="faq">
             <button class="question-wrapper" aria-expanded="false" aria-controls="answer4">
               <span class="question-title">What are the benefits of BJJ for kids and teens? </span>
-              <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
-              <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
+              <img src="./images/icon-plus.svg" alt="plus icon" class="icon-plus" />
+              <img src="./images/icon-minus.svg" alt="minus icon" class="hide icon-minus" />
             </button>
             <p class="faq-answer" id="answer4" aria-hidden="true"><span>BJJ helps kids and teens build confidence, discipline, and fitness in a fun and supportive atmosphere. It teaches valuable self-defense skills while fostering teamwork, respect, and resilience. Classes are tailored to their age and skill level to ensure a positive experience.</span></p>
           </li>
@@ -460,16 +460,16 @@
           <li class="faq">
             <button class="question-wrapper" aria-expanded="false" aria-controls="answer5">
               <span class="question-title">How does BJJ improve self-defense skills?</span>
-              <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
-              <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
+              <img src="./images/icon-plus.svg" alt="plus icon" class="icon-plus" />
+              <img src="./images/icon-minus.svg" alt="minus icon" class="hide icon-minus" />
             </button>
             <p class="faq-answer" id="answer5" aria-hidden="true"><span>BJJ equips you with techniques to control and neutralize opponents through leverage, regardless of size or strength. It focuses on practical scenarios like defending against larger attackers, making it an effective self-defense system.</span></p>
           </li>
           <li class="faq">
             <button class="question-wrapper" aria-expanded="false" aria-controls="answer6">
               <span class="question-title">Is Brazilian Jiu-Jitsu suitable for women?</span>
-              <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
-              <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
+              <img src="./images/icon-plus.svg" alt="plus icon" class="icon-plus" />
+              <img src="./images/icon-minus.svg" alt="minus icon" class="hide icon-minus" />
             </button>
             <p class="faq-answer" id="answer6" aria-hidden="true"><span>Yes, BJJ is excellent for women. It teaches leverage-based techniques that don’t rely on strength, making it ideal for self-defense. Our classes provide a safe and supportive environment for everyone, regardless of gender or fitness level.</span></p>
           </li>
