--- a/gallery.html
+++ b/gallery.html
@@ -236,7 +236,7 @@
         <a href="./images/gallery-4.webp" data-lightbox="pictures" data-title="Golden Tiger Academy training area.">
           <img src="./images/gallery-4.webp" alt="Golden Tiger Academy training area" />
         </a>
-        <a href="./images/gallery-5.webp" data-lightbox="pictures" data-title="Muay Thai Class Sparring.">
+        <a href="./images/gallery-5.webp" data-lightbox="pictures" data-title="Muay Thai Class Sparring." alt="Muay Thai Class Sparring">
           <img src="./images/gallery-5.webp" alt="Muay Thai Class Sparring" />
         </a>
         <a href="./images/gallery-6.webp" data-lightbox="pictures" data-title="No Gi Brazilian Jiu-Jitsu Class.">
