--- a/karate.html
+++ b/karate.html
@@ -327,22 +327,22 @@
         <div class="benefits-text-container">
           <h2>The Benefits</h2>
           <div class="benefits">
-            <img src="./images/icon-self-defense.webp" class="class-icon" alt="" />
+            <img src="./images/icon-self-defense.webp" class="class-icon" alt="self-defense icon" />
             <h3>Self-Defense</h3>
             <p>Develop practical self-defense skills and techniques that can be applied in real-life situations, empowering you to protect yourself and others effectively.</p>
           </div>
           <div class="benefits">
-            <img src="./images/icon-fitness.webp" class="class-icon" alt="" />
+            <img src="./images/icon-fitness.webp" class="class-icon" alt="fitness icon" />
             <h3>Improved Fitness</h3>
             <p>mprove your overall fitness level by enhancing cardiovascular health, strength, flexibility, and agility through rigorous Karate training routines and techniques.</p>
           </div>
           <div class="benefits">
-            <img src="./images/icon-mental-health.webp" class="class-icon" alt="" />
+            <img src="./images/icon-mental-health.webp" class="class-icon" alt="mental health icon" />
             <h3>Mental Wellness</h3>
             <p>Cultivate mental discipline, concentration, and focus as you navigate the intricate movements and principles of Karate, leading to improved mental clarity and mindfulness.</p>
           </div>
           <div class="benefits">
-            <img src="./images/icon-community.webp" class="class-icon" alt="" />
+            <img src="./images/icon-community.webp" class="class-icon" alt="community icon" />
             <h3>Supportive Community</h3>
             <p>Join a supportive community where you'll forge friendships, share experiences, and encourage each other to reach new heights in your Karate journey.</p>
           </div>
@@ -357,7 +357,7 @@
       <div class="first-class-container-inner">
         <div class="tip hidden">
           <div class="tip-image">
-            <img src="./images/icon-tshirt.webp" class="icon" alt="" />
+            <img src="./images/icon-tshirt.webp" class="icon" alt="t-shirt icon" />
           </div>
 
           <h4>Dress Comforably</h4>
@@ -365,14 +365,14 @@
         </div>
         <div class="tip hidden">
           <div class="tip-image">
-            <img src="./images/icon-water-bottle.webp" class="icon" alt="" />
+            <img src="./images/icon-water-bottle.webp" class="icon" alt="water bottle icon" />
           </div>
           <h4>Stay Hydrated</h4>
           <p>Bring along a water bottle to keep yourself hydrated during training.</p>
         </div>
         <div class="tip hidden">
           <div class="tip-image">
-            <img src="./images/icon-scissors.webp" class="icon" alt="" />
+            <img src="./images/icon-scissors.webp" class="icon" alt="scissors icon" />
           </div>
           <h4>Safety First</h4>
           <p>Remove jewelry and trim your fingernails and toenails. This reduces the risk of accidental injury</p>
@@ -388,19 +388,19 @@
           <h3>Lucy</h3>
           <img src="./images/icon-5-stars.webp" class="icon-stars" alt="5 stars" />
           <p class="testimonial-review">Great, supportive atmosphere and friendly people. I've learned so much and gained confidence from these Karate classes. Definitely one of the best sports I've done—highly recommend!</p>
-          <img src="./images/icon-google-reviews.webp" alt="" class="icon-google" />
+          <img src="./images/icon-google-reviews.webp" alt="google reviews logo" class="icon-google" />
         </div>
         <div class="testimonial-card hidden">
           <h3>Liam</h3>
           <img src="./images/icon-5-stars.webp" class="icon-stars" alt="5 stars" />
           <p class="testimonial-review">Great club with great Karate coaches. A very friendly and encouraging environment to learn and grow.</p>
-          <img src="./images/icon-google-reviews.webp" alt="" class="icon-google" />
+          <img src="./images/icon-google-reviews.webp" alt="google reviews logo" class="icon-google" />
         </div>
         <div class="testimonial-card hidden">
           <h3>Robert</h3>
           <img src="./images/icon-5-stars.webp" class="icon-stars" alt="5 stars" />
           <p class="testimonial-review">Very nice place with friendly staff. If you looking for any Karate classes for your child including kids with a disabilty, this is for you.</p>
-          <img src="./images/icon-google-reviews.webp" alt="" class="icon-google" />
+          <img src="./images/icon-google-reviews.webp" alt="google reviews logo" class="icon-google" />
         </div>
       </div>
       <div class="shape-divider-bottom">
@@ -418,8 +418,8 @@
           <li class="faq">
             <button class="question-wrapper" aria-expanded="false" aria-controls="answer1">
               <span class="question-title">What is Kenpo Karate, and how is it different from other martial arts?</span>
-              <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
-              <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
+              <img src="./images/icon-plus.svg" alt="plus icon" class="icon-plus" />
+              <img src="./images/icon-minus.svg" alt="minus icon" class="hide icon-minus" />
             </button>
             <p class="faq-answer" id="answer1" aria-hidden="true"><span>Kenpo Karate is a dynamic martial art blending Japanese and Chinese traditions. It emphasizes rapid strikes, fluid movement, and effective counterattacks. Unlike many martial arts, Kenpo focuses on practical self-defense techniques that can be adapted for modern-day scenarios, including MMA. Its versatility makes it stand out as a highly effective system for all skill levels.</span></p>
           </li>
@@ -427,16 +427,16 @@
           <li class="faq">
             <button class="question-wrapper" aria-expanded="false" aria-controls="answer2">
               <span class="question-title">Is Kenpo Karate suitable for beginners?</span>
-              <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
-              <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
+              <img src="./images/icon-plus.svg" alt="plus icon" class="icon-plus" />
+              <img src="./images/icon-minus.svg" alt="minus icon" class="hide icon-minus" />
             </button>
             <p class="faq-answer" id="answer2" aria-hidden="true"><span>Yes! Kenpo Karate is designed for all experience levels, from complete beginners to advanced practitioners. Whether you're looking to learn self-defense, improve fitness, or develop discipline, our classes provide a supportive environment to help you get started.</span></p>
           </li>
           <li class="faq">
             <button class="question-wrapper" aria-expanded="false" aria-controls="answer3">
               <span class="question-title">What are the benefits of learning Kenpo Karate?</span>
-              <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
-              <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
+              <img src="./images/icon-plus.svg" alt="plus icon" class="icon-plus" />
+              <img src="./images/icon-minus.svg" alt="minus icon" class="hide icon-minus" />
             </button>
             <p class="faq-answer" id="answer3" aria-hidden="true"><span>Kenpo Karate offers a wide range of benefits. It provides practical self-defense techniques for real-life situations, improves overall fitness by enhancing cardiovascular health, strength, flexibility, and coordination, and helps develop mental discipline, focus, and stress management skills. Additionally, Kenpo Karate fosters a strong sense of community, where students build friendships and encourage one another on their martial arts journey.</span></p>
           </li>
@@ -444,8 +444,8 @@
           <li class="faq">
             <button class="question-wrapper" aria-expanded="false" aria-controls="answer4">
               <span class="question-title">What should I expect in a Kenpo Karate class?</span>
-              <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
-              <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
+              <img src="./images/icon-plus.svg" alt="plus icon" class="icon-plus" />
+              <img src="./images/icon-minus.svg" alt="minus icon" class="hide icon-minus" />
             </button>
             <p class="faq-answer" id="answer4" aria-hidden="true"><span>Classes begin with a warm-up to prepare your body, followed by drills focused on strikes, blocks, and movement techniques. You’ll also practice forms (katas) and engage in partner exercises or sparring, depending on your level. Each class ends with a cool-down and reflections on the techniques learned. </span></p>
           </li>
@@ -453,16 +453,16 @@
           <li class="faq">
             <button class="question-wrapper" aria-expanded="false" aria-controls="answer5">
               <span class="question-title">Is Kenpo Karate good for self-defense?</span>
-              <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
-              <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
+              <img src="./images/icon-plus.svg" alt="plus icon" class="icon-plus" />
+              <img src="./images/icon-minus.svg" alt="minus icon" class="hide icon-minus" />
             </button>
             <p class="faq-answer" id="answer5" aria-hidden="true"><span>Absolutely! Kenpo Karate is designed with practicality in mind. It teaches you how to defend yourself using precise strikes, efficient counterattacks, and situational awareness. Its techniques are effective for various real-world scenarios, making it an excellent choice for self-defense.</span></p>
           </li>
           <li class="faq">
             <button class="question-wrapper" aria-expanded="false" aria-controls="answer6">
               <span class="question-title">Can children and teens learn Kenpo Karate?</span>
-              <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
-              <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
+              <img src="./images/icon-plus.svg" alt="plus icon" class="icon-plus" />
+              <img src="./images/icon-minus.svg" alt="minus icon" class="hide icon-minus" />
             </button>
             <p class="faq-answer" id="answer6" aria-hidden="true"><span>Yes! We offer tailored classes for kids (ages 5-12) and teens (ages 13-17). These sessions focus on building confidence, discipline, and physical fitness through engaging activities and expert guidance. Classes are structured to be both educational and fun, ensuring a positive experience for younger students.</span></p>
           </li>
