--- a/kickboxing.html
+++ b/kickboxing.html
@@ -318,22 +318,22 @@
         <div class="benefits-text-container">
           <h2>The Benefits</h2>
           <div class="benefits">
-            <img src="./images/icon-self-defense.webp" class="class-icon" alt="" />
+            <img src="./images/icon-self-defense.webp" class="class-icon" alt="self-defense icon" />
             <h3>Self-Defense</h3>
             <p>Acquire practical skills to defend yourself confidently in various situations, boosting your sense of safety and security.</p>
           </div>
           <div class="benefits">
-            <img src="./images/icon-fitness.webp" class="class-icon" alt="" />
+            <img src="./images/icon-fitness.webp" class="class-icon" alt="fitness icon" />
             <h3>Improved Fitness</h3>
             <p>Enhance your cardiovascular health, strength, and overall fitness levels through dynamic kickboxing workouts and techniques that engage the entire body.</p>
           </div>
           <div class="benefits">
-            <img src="./images/icon-mental-health.webp" class="class-icon" alt="" />
+            <img src="./images/icon-mental-health.webp" class="class-icon" alt="mental health icon" />
             <h3>Mental Wellness</h3>
             <p>Experience improved focus, discipline, and stress management as you navigate the mental challenges and rewards of Kickboxing training.</p>
           </div>
           <div class="benefits">
-            <img src="./images/icon-community.webp" class="class-icon" alt="" />
+            <img src="./images/icon-community.webp" class="class-icon" alt="community icon" />
             <h3>Supportive Community</h3>
             <p>Join a fun and welcoming community where you'll make friends, share laughs, and support each other on your Kickboxing journey.</p>
           </div>
@@ -348,7 +348,7 @@
       <div class="first-class-container-inner">
         <div class="tip hidden">
           <div class="tip-image">
-            <img src="./images/icon-tshirt.webp" class="icon" alt="" />
+            <img src="./images/icon-tshirt.webp" class="icon" alt="t-shirt icon" />
           </div>
 
           <h4>Dress Comforably</h4>
@@ -356,14 +356,14 @@
         </div>
         <div class="tip hidden">
           <div class="tip-image">
-            <img src="./images/icon-water-bottle.webp" class="icon" alt="" />
+            <img src="./images/icon-water-bottle.webp" class="icon" alt="water bottle icon" />
           </div>
           <h4>Stay Hydrated</h4>
           <p>Bring along a water bottle to keep yourself hydrated during training.</p>
         </div>
         <div class="tip hidden">
           <div class="tip-image">
-            <img src="./images/icon-scissors.webp" class="icon" alt="" />
+            <img src="./images/icon-scissors.webp" class="icon" alt="scissors icon" />
           </div>
           <h4>Safety First</h4>
           <p>Remove jewelry and trim your fingernails and toenails. This reduces the risk of accidental injury</p>
@@ -379,19 +379,19 @@
           <h3>Edie</h3>
           <img src="./images/icon-5-stars.webp" class="icon-stars" alt="5 stars" />
           <p class="testimonial-review">Been in Kickboxing for ten years, earned my black belt, and made great friends. Ken is a fantastic, supportive instructor. This club has boosted my confidence and self-defense skills. Highly recommend!</p>
-          <img src="./images/icon-google-reviews.webp" alt="" class="icon-google" />
+          <img src="./images/icon-google-reviews.webp" alt="google reviews logo" class="icon-google" />
         </div>
         <div class="testimonial-card hidden">
           <h3>Sara</h3>
           <img src="./images/icon-5-stars.webp" class="icon-stars" alt="5 stars" />
           <p class="testimonial-review">An amazing kickboxing class with great instructors. I've been training here for 7 years now. Highly recommend for improving fitness and learning self-defense.</p>
-          <img src="./images/icon-google-reviews.webp" alt="" class="icon-google" />
+          <img src="./images/icon-google-reviews.webp" alt="google reviews logo" class="icon-google" />
         </div>
         <div class="testimonial-card hidden">
           <h3>Hugh</h3>
           <img src="./images/icon-5-stars.webp" class="icon-stars" alt="5 stars" />
           <p class="testimonial-review">Great place to train with welcoming staff, the kickboxing classes great for kids and teenagers</p>
-          <img src="./images/icon-google-reviews.webp" alt="" class="icon-google" />
+          <img src="./images/icon-google-reviews.webp" alt="google reviews logo" class="icon-google" />
         </div>
       </div>
       <div class="shape-divider-bottom">
@@ -409,8 +409,8 @@
           <li class="faq">
             <button class="question-wrapper" aria-expanded="false" aria-controls="answer1">
               <span class="question-title">What is Kickboxing, and how is it different from other martial arts?</span>
-              <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
-              <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
+              <img src="./images/icon-plus.svg" alt="plus icon" class="icon-plus" />
+              <img src="./images/icon-minus.svg" alt="minus icon" class="hide icon-minus" />
             </button>
             <p class="faq-answer" id="answer1" aria-hidden="true"><span>Kickboxing is a striking-focused martial art combining powerful kicks, punches, and knee strikes into a dynamic system of offense and defense. Unlike grappling arts, kickboxing emphasizes stand-up techniques and delivers high-intensity workouts that improve strength, speed, and agility. Its unique blend of martial arts and fitness makes it ideal for both competitive sports and personal development.</span></p>
           </li>
@@ -418,16 +418,16 @@
           <li class="faq">
             <button class="question-wrapper" aria-expanded="false" aria-controls="answer2">
               <span class="question-title">Is Kickboxing suitable for beginners?</span>
-              <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
-              <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
+              <img src="./images/icon-plus.svg" alt="plus icon" class="icon-plus" />
+              <img src="./images/icon-minus.svg" alt="minus icon" class="hide icon-minus" />
             </button>
             <p class="faq-answer" id="answer2" aria-hidden="true"><span>Yes! Kickboxing is a versatile martial art suitable for all levels, including beginners. Classes at Golden Tiger Academy are designed to gradually introduce techniques, helping newcomers build confidence and skills at their own pace.</span></p>
           </li>
           <li class="faq">
             <button class="question-wrapper" aria-expanded="false" aria-controls="answer3">
               <span class="question-title">What are the benefits of learning Kickboxing?</span>
-              <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
-              <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
+              <img src="./images/icon-plus.svg" alt="plus icon" class="icon-plus" />
+              <img src="./images/icon-minus.svg" alt="minus icon" class="hide icon-minus" />
             </button>
             <p class="faq-answer" id="answer3" aria-hidden="true"><span>Kickboxing provides a comprehensive workout that improves cardiovascular health, strength, and flexibility. It also enhances mental focus, discipline, and stress management while teaching effective self-defense techniques. The supportive environment of kickboxing classes fosters camaraderie, making it a holistic experience for physical and mental wellness.</span></p>
           </li>
@@ -435,8 +435,8 @@
           <li class="faq">
             <button class="question-wrapper" aria-expanded="false" aria-controls="answer4">
               <span class="question-title">What should I expect in a Kickboxing class?</span>
-              <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
-              <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
+              <img src="./images/icon-plus.svg" alt="plus icon" class="icon-plus" />
+              <img src="./images/icon-minus.svg" alt="minus icon" class="hide icon-minus" />
             </button>
             <p class="faq-answer" id="answer4" aria-hidden="true"><span>Kickboxing classes typically start with a warm-up to prepare your body for training. You’ll practice fundamental techniques such as punches, kicks, and combinations through pad work, shadowboxing, or partner drills. Classes may include sparring for advanced participants and end with a cool-down or conditioning exercises.</span></p>
           </li>
@@ -444,16 +444,16 @@
           <li class="faq">
             <button class="question-wrapper" aria-expanded="false" aria-controls="answer5">
               <span class="question-title">Is Kickboxing effective for self-defense?</span>
-              <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
-              <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
+              <img src="./images/icon-plus.svg" alt="plus icon class="icon-plus" />
+              <img src="./images/icon-minus.svg" alt="minus icon" class="hide icon-minus" />
             </button>
             <p class="faq-answer" id="answer5" aria-hidden="true"><span>Yes! Kickboxing equips you with practical skills for defending yourself in real-world situations. The striking techniques, combined with improved reflexes and situational awareness, make it an effective martial art for personal safety.</span></p>
           </li>
           <li class="faq">
             <button class="question-wrapper" aria-expanded="false" aria-controls="answer6">
               <span class="question-title">Can children and teens learn Kickboxing?</span>
-              <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
-              <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
+              <img src="./images/icon-plus.svg" alt="plus icon" class="icon-plus" />
+              <img src="./images/icon-minus.svg" alt="minus icon" class="hide icon-minus" />
             </button>
             <p class="faq-answer" id="answer6" aria-hidden="true"><span>Absolutely! Our Wednesday kickboxing classes are specifically designed for kids and teens. With exciting games and activities, these sessions are not only fun but also help young participants develop discipline, confidence, and essential life skills under the guidance of Ken Byrne, a 3rd-degree black belt. </span></p>
           </li>
