--- a/korean-kickboxing.html
+++ b/korean-kickboxing.html
@@ -318,22 +318,22 @@
         <div class="benefits-text-container">
           <h2>The Benefits</h2>
           <div class="benefits">
-            <img src="./images/icon-self-defense.webp" class="class-icon" alt="" />
+            <img src="./images/icon-self-defense.webp" class="class-icon" alt="self-defense icon" />
             <h3>Self-Defense</h3>
             <p>Acquire practical skills to defend yourself confidently in various situations, boosting your sense of safety and security.</p>
           </div>
           <div class="benefits">
-            <img src="./images/icon-fitness.webp" class="class-icon" alt="" />
+            <img src="./images/icon-fitness.webp" class="class-icon" alt="fitness icon" />
             <h3>Improved Fitness</h3>
             <p>Elevate your cardiovascular health, strength, and overall fitness levels through dynamic Korean Kickboxing workouts and techniques.</p>
           </div>
           <div class="benefits">
-            <img src="./images/icon-mental-health.webp" class="class-icon" alt="" />
+            <img src="./images/icon-mental-health.webp" class="class-icon" alt="mental health icon" />
             <h3>Mental Wellness</h3>
             <p>Experience improved focus, discipline, and stress management as you navigate the mental challenges and rewards of Korean Kickboxing training.</p>
           </div>
           <div class="benefits">
-            <img src="./images/icon-community.webp" class="class-icon" alt="" />
+            <img src="./images/icon-community.webp" class="class-icon" alt="community icon" />
             <h3>Supportive Community</h3>
             <p>Join a fun and welcoming community where you'll make friends, share laughs, and support each other on your Korean Kickboxing journey.</p>
           </div>
@@ -348,7 +348,7 @@
       <div class="first-class-container-inner">
         <div class="tip hidden">
           <div class="tip-image">
-            <img src="./images/icon-tshirt.webp" class="icon" alt="" />
+            <img src="./images/icon-tshirt.webp" class="icon" alt="t-shirt icon" />
           </div>
 
           <h4>Dress Comforably</h4>
@@ -356,14 +356,14 @@
         </div>
         <div class="tip hidden">
           <div class="tip-image">
-            <img src="./images/icon-water-bottle.webp" class="icon" alt="" />
+            <img src="./images/icon-water-bottle.webp" class="icon" alt="water bottle icon" />
           </div>
           <h4>Stay Hydrated</h4>
           <p>Bring along a water bottle to keep yourself hydrated during training.</p>
         </div>
         <div class="tip hidden">
           <div class="tip-image">
-            <img src="./images/icon-scissors.webp" class="icon" alt="" />
+            <img src="./images/icon-scissors.webp" class="icon" alt="scissors icon" />
           </div>
           <h4>Safety First</h4>
           <p>Remove jewelry and trim your fingernails and toenails. This reduces the risk of accidental injury</p>
@@ -379,19 +379,19 @@
           <h3>Niamh</h3>
           <img src="./images/icon-5-stars.webp" class="icon-stars" alt="5 stars" />
           <p class="testimonial-review">My kids love the Korean kickboxing classes. The instructors are fantastic and the classes are fun. It's a great way for them to stay active</p>
-          <img src="./images/icon-google-reviews.webp" alt="" class="icon-google" />
+          <img src="./images/icon-google-reviews.webp" alt="google reviews logo" class="icon-google" />
         </div>
         <div class="testimonial-card hidden">
           <h3>Tom</h3>
           <img src="./images/icon-5-stars.webp" class="icon-stars" alt="5 stars" />
           <p class="testimonial-review">Such a great experience for kids! The classes are both challenging and fun, and my child has really enjoyed improved their confidence.</p>
-          <img src="./images/icon-google-reviews.webp" alt="" class="icon-google" />
+          <img src="./images/icon-google-reviews.webp" alt="google reviews logo" class="icon-google" />
         </div>
         <div class="testimonial-card hidden">
           <h3>Mark</h3>
           <img src="./images/icon-5-stars.webp" class="icon-stars" alt="5 stars" />
           <p class="testimonial-review">They play lots of games and my child has made great friends. It’s a fantastic way to keep them active and engaged!</p>
-          <img src="./images/icon-google-reviews.webp" alt="" class="icon-google" />
+          <img src="./images/icon-google-reviews.webp" alt="google reviews logo" class="icon-google" />
         </div>
       </div>
       <div class="shape-divider-bottom">
@@ -409,7 +409,7 @@
           <li class="faq">
             <button class="question-wrapper" aria-expanded="false" aria-controls="answer1">
               <span class="question-title"> What is Korean Kickboxing?</span>
-              <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
+              <img src="./images/icon-plus.svg" alt="plus icon" class="icon-plus" />
               <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
             </button>
             <p class="faq-answer" id="answer1" aria-hidden="true"><span>Korean Kickboxing is a versatile martial art blending influences from Won Hwa Do, Taekwondo, and traditional kickboxing. It emphasizes fast, precise kicks and strategic footwork, making it an effective discipline for both self-defense and competitive sparring.</span></p>
@@ -418,7 +418,7 @@
           <li class="faq">
             <button class="question-wrapper" aria-expanded="false" aria-controls="answer2">
               <span class="question-title">What makes Korean Kickboxing unique?</span>
-              <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
+              <img src="./images/icon-plus.svg" alt="plus icon" class="icon-plus" />
               <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
             </button>
             <p class="faq-answer" id="answer2" aria-hidden="true"><span>The unique blend of martial arts influences gives Korean Kickboxing its distinctive focus on dynamic kicks, fluid movements, and practical techniques. It combines the power of kickboxing with the agility of Taekwondo and the adaptability of Won Hwa Do.</span></p>
@@ -426,8 +426,8 @@
           <li class="faq">
             <button class="question-wrapper" aria-expanded="false" aria-controls="answer3">
               <span class="question-title">Is Korean Kickboxing suitable for beginners?</span>
-              <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
-              <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
+              <img src="./images/icon-plus.svg" alt="plus icon" class="icon-plus" />
+              <img src="./images/icon-minus.svg" alt="minus icon" class="hide icon-minus" />
             </button>
             <p class="faq-answer" id="answer3" aria-hidden="true"><span>Yes! Korean Kickboxing is ideal for beginners, as classes at Golden Tiger Academy focus on building foundational skills, physical fitness, and confidence in a supportive environment.</span></p>
           </li>
@@ -435,8 +435,8 @@
           <li class="faq">
             <button class="question-wrapper" aria-expanded="false" aria-controls="answer4">
               <span class="question-title">What are the benefits of learning Korean Kickboxing?</span>
-              <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
-              <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
+              <img src="./images/icon-plus.svg" alt="plus icon" class="icon-plus" />
+              <img src="./images/icon-minus.svg" alt="minus icon" class="hide icon-minus" />
             </button>
             <p class="faq-answer" id="answer4" aria-hidden="true"><span>Korean Kickboxing improves strength, cardiovascular fitness, flexibility, and coordination. It also builds mental resilience, focus, and discipline while teaching practical self-defense techniques that are applicable in real-life situations.</span></p>
           </li>
@@ -444,16 +444,16 @@
           <li class="faq">
             <button class="question-wrapper" aria-expanded="false" aria-controls="answer5">
               <span class="question-title">What should I expect in a Korean Kickboxing class?</span>
-              <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
-              <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
+              <img src="./images/icon-plus.svg" alt="plus icon" class="icon-plus" />
+              <img src="./images/icon-minus.svg" alt="minus icon" class="hide icon-minus" />
             </button>
             <p class="faq-answer" id="answer5" aria-hidden="true"><span>Classes include warm-ups, drills focusing on kicks and footwork, and sparring practice for more experienced students. The sessions are designed to be engaging and challenging, catering to all experience levels.</span></p>
           </li>
           <li class="faq">
             <button class="question-wrapper" aria-expanded="false" aria-controls="answer6">
               <span class="question-title">Are the classes suitable for kids?</span>
-              <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
-              <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
+              <img src="./images/icon-plus.svg" alt="plus icon" class="icon-plus" />
+              <img src="./images/icon-minus.svg" alt="minus icon" class="hide icon-minus" />
             </button>
             <p class="faq-answer" id="answer6" aria-hidden="true"><span>Yes! Golden Tiger Academy offers Korean Kickboxing classes for kids, focusing on fun, fitness, and skill-building. Through warm-ups, techniques, and sparring, children develop confidence, discipline, and self-defense skills.</span></p>
           </li>
