--- a/muay-thai.html
+++ b/muay-thai.html
@@ -328,22 +328,22 @@
         <div class="benefits-text-container">
           <h2>The Benefits</h2>
           <div class="benefits">
-            <img src="./images/icon-self-defense.webp" class="class-icon" alt="" />
+            <img src="./images/icon-self-defense.webp" class="class-icon" alt="self-defense icon" />
             <h3>Self-Defense</h3>
             <p>Acquire practical skills to defend yourself confidently in various situations, boosting your sense of safety and security.</p>
           </div>
           <div class="benefits">
-            <img src="./images/icon-fitness.webp" class="class-icon" alt="" />
+            <img src="./images/icon-fitness.webp" class="class-icon" alt="fitness icon" />
             <h3>Improved Fitness</h3>
             <p>Elevate your cardiovascular endurance, strength, and overall fitness through intense Muay Thai workouts and techniques.</p>
           </div>
           <div class="benefits">
-            <img src="./images/icon-mental-health.webp" class="class-icon" alt="" />
+            <img src="./images/icon-mental-health.webp" class="class-icon" alt="mental health icon" />
             <h3>Mental Wellness</h3>
             <p>Build mental toughness, focus, and discipline as you face the challenges and triumphs of Muay Thai training, leading to better stress management and resilience.</p>
           </div>
           <div class="benefits">
-            <img src="./images/icon-community.webp" class="class-icon" alt="" />
+            <img src="./images/icon-community.webp" class="class-icon" alt="community icon" />
             <h3>Supportive Community</h3>
             <p>Join a supportive community where you'll forge friendships, share experiences, and encourage each other to reach new heights in your Muay Thai journey.</p>
           </div>
@@ -358,7 +358,7 @@
       <div class="first-class-container-inner">
         <div class="tip hidden">
           <div class="tip-image">
-            <img src="./images/icon-tshirt.webp" class="icon" alt="" />
+            <img src="./images/icon-tshirt.webp" class="icon" alt="t-shirt icon" />
           </div>
 
           <h4>Dress Comforably</h4>
@@ -366,14 +366,14 @@
         </div>
         <div class="tip hidden">
           <div class="tip-image">
-            <img src="./images/icon-water-bottle.webp" class="icon" alt="" />
+            <img src="./images/icon-water-bottle.webp" class="icon" alt="water bottle icon" />
           </div>
           <h4>Stay Hydrated</h4>
           <p>Bring along a water bottle to keep yourself hydrated during training.</p>
         </div>
         <div class="tip hidden">
           <div class="tip-image">
-            <img src="./images/icon-scissors.webp" class="icon" alt="" />
+            <img src="./images/icon-scissors.webp" class="icon" alt="scissors icon" />
           </div>
           <h4>Safety First</h4>
           <p>Remove jewelry and trim your fingernails and toenails. This reduces the risk of accidental injury</p>
@@ -389,19 +389,19 @@
           <h3>Damian</h3>
           <img src="./images/icon-5-stars.webp" class="icon-stars" alt="5 stars" />
           <p class="testimonial-review">The Muay Thai classes here are fantastic! Paul is a great instructor and the training is both challenging and fun. Highly recommend!</p>
-          <img src="./images/icon-google-reviews.webp" alt="" class="icon-google" />
+          <img src="./images/icon-google-reviews.webp" alt="google reviews logo" class="icon-google" />
         </div>
         <div class="testimonial-card hidden">
           <h3>Sara</h3>
           <img src="./images/icon-5-stars.webp" class="icon-stars" alt="5 stars" />
           <p class="testimonial-review">I've learned so much since joining the Muay Thai class. Great atmosphere and supportive coaching make every session enjoyable.</p>
-          <img src="./images/icon-google-reviews.webp" alt="" class="icon-google" />
+          <img src="./images/icon-google-reviews.webp" alt="google reviews logo" class="icon-google" />
         </div>
         <div class="testimonial-card hidden">
           <h3>João</h3>
           <img src="./images/icon-5-stars.webp" class="icon-stars" alt="5 stars" />
           <p class="testimonial-review">This Muay Thai class is top-notch! It's a great workout, and the instructors really know their stuff.</p>
-          <img src="./images/icon-google-reviews.webp" alt="" class="icon-google" />
+          <img src="./images/icon-google-reviews.webp" alt="google reviews logo" class="icon-google" />
         </div>
       </div>
       <div class="shape-divider-bottom">
@@ -419,8 +419,8 @@
           <li class="faq">
             <button class="question-wrapper" aria-expanded="false" aria-controls="answer1">
               <span class="question-title">What is Muay Thai, and how is it different from other martial arts?</span>
-              <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
-              <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
+              <img src="./images/icon-plus.svg" alt="plus icon" class="icon-plus" />
+              <img src="./images/icon-minus.svg" alt="minus icon" class="hide icon-minus" />
             </button>
             <p class="faq-answer" id="answer1" aria-hidden="true"><span> Muay Thai, also known as the "Art of Eight Limbs," is a combat sport from Thailand that utilizes punches, kicks, elbows, knees, and clinching techniques. It’s known for its devastating strikes and clinch work, making it one of the most effective striking arts in the world, especially in MMA.</span></p>
           </li>
@@ -428,16 +428,16 @@
           <li class="faq">
             <button class="question-wrapper" aria-expanded="false" aria-controls="answer2">
               <span class="question-title">Can anyone start Muay Thai, even with no experience?</span>
-              <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
-              <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
+              <img src="./images/icon-plus.svg" alt="plus icon" class="icon-plus" />
+              <img src="./images/icon-minus.svg" alt="minus icon" class="hide icon-minus" />
             </button>
             <p class="faq-answer" id="answer2" aria-hidden="true"><span>Yes, absolutely! Muay Thai is suitable for people of all skill levels. Whether you’re a complete beginner or have previous martial arts experience, our classes cater to everyone, starting with basic techniques and gradually progressing to more advanced drills and sparring.</span></p>
           </li>
           <li class="faq">
             <button class="question-wrapper" aria-expanded="false" aria-controls="answer3">
               <span class="question-title">What should I expect in my first Muay Thai class?</span>
-              <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
-              <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
+              <img src="./images/icon-plus.svg" alt="plus icon" class="icon-plus" />
+              <img src="./images/icon-minus.svg" alt="minus icon" class="hide icon-minus" />
             </button>
             <p class="faq-answer" id="answer3" aria-hidden="true"><span>In your first class, you’ll begin with a dynamic warm-up to get your body ready. Then, you'll dive into learning basic techniques such as punches, kicks, elbows, and knees. You’ll also practice with pads and partner drills, all in a safe and supportive environment. The focus is on learning the fundamentals while having fun.</span></p>
           </li>
@@ -445,8 +445,8 @@
           <li class="faq">
             <button class="question-wrapper" aria-expanded="false" aria-controls="answer4">
               <span class="question-title">Do I need to be in great shape to start Muay Thai?</span>
-              <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
-              <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
+              <img src="./images/icon-plus.svg" alt="plus icon" class="icon-plus" />
+              <img src="./images/icon-minus.svg" alt="minus icon" class="hide icon-minus" />
             </button>
             <p class="faq-answer" id="answer4" aria-hidden="true"><span>Not at all! Muay Thai is a fantastic way to improve your fitness. While you’ll get a great workout, our classes are designed to accommodate all fitness levels. As you train, you’ll naturally build strength, cardiovascular endurance, and overall fitness.</span></p>
           </li>
@@ -454,16 +454,16 @@
           <li class="faq">
             <button class="question-wrapper" aria-expanded="false" aria-controls="answer5">
               <span class="question-title"> How often should I train in Muay Thai?</span>
-              <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
-              <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
+              <img src="./images/icon-plus.svg" alt="plus icon" class="icon-plus" />
+              <img src="./images/icon-minus.svg" alt="minus icon" class="hide icon-minus" />
             </button>
             <p class="faq-answer" id="answer5" aria-hidden="true"><span>For beginners, training 1-2 times per week is ideal. This frequency will help you develop solid technique and improve your fitness over time. As you progress, you can increase the number of classes depending on your goals.</span></p>
           </li>
           <li class="faq">
             <button class="question-wrapper" aria-expanded="false" aria-controls="answer6">
               <span class="question-title">Is Muay Thai good for self-defense?</span>
-              <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
-              <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
+              <img src="./images/icon-plus.svg" alt="plus icon" class="icon-plus" />
+              <img src="./images/icon-minus.svg" alt="minus icon" class="hide icon-minus" />
             </button>
             <p class="faq-answer" id="answer6" aria-hidden="true"><span>Yes! Muay Thai is one of the most effective striking arts for self-defense. It teaches you how to use your body’s natural weapons, including fists, elbows, knees, and legs, to defend yourself in real-life situations. Additionally, you’ll learn effective clinch work to control and neutralize opponents.</span></p>
           </li>
